[package]
name = "css-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_atoms = "0.2.11"
swc_css = "0.105.0"
swc_css_ast = "0.93.1"
swc_css_codegen = "0.102.0"
swc_css_codegen_macros = "0.2.0"
swc_css_parser = "0.101.4"
swc_css_visit = "0.92.0"
swc_css_minifier = "0.67.0"
serde = "1.0.127"
serde_json = "1.0.66"
swc_common = "0.18.8"